[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Titlescreen.png" type="Texture" id=1]
[ext_resource path="res://Assets/Buttons/PRESS ENTER - Titlescreen.png" type="Texture" id=2]
[ext_resource path="res://Assets/Logo.png" type="Texture" id=3]
[ext_resource path="res://Items/CameraShake.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Titlescreen.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 85, 11 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 85, 0, 85, 11 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titlescreen" type="Sprite" parent="."]
position = Vector2( 160.084, 90.0459 )
scale = Vector2( 0.61, 0.61 )
texture = ExtResource( 1 )

[node name="PressEnter" type="AnimatedSprite" parent="Titlescreen"]
visible = false
position = Vector2( 0, -80 )
frames = SubResource( 3 )
frame = 1
speed_scale = 0.4
playing = true

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 160, -120 )
scale = Vector2( 0.61, 0.61 )
texture = ExtResource( 3 )

[node name="TweenLogo" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true

[node name="CameraShake" parent="Camera2D" instance=ExtResource( 4 )]

[connection signal="tween_all_completed" from="TweenLogo" to="." method="_on_TweenLogo_tween_all_completed"]
